--- a/Fig2A.SVM_prediction/Analysis2A_SVM_invest_prediction.Rmd
+++ b/Fig2A.SVM_prediction/Analysis2A_SVM_invest_prediction.Rmd
@@ -24,10 +24,10 @@ dataset_y <- read.csv('win_lose_and_pay_single_trial.csv',header=TRUE,sep=",")
 dataset_y_attack <- dataset_y[dataset_y$role.A.1. == 1,]
 dataset_y_attack <- dataset_y_attack[-c(4,14,22),] # Three sessions are deleted due to the absent of winning trial(4,22) and brain signal(14). 
 
-BOLD_mean = extract_win_or_pay_mean(dataset_BOLD,dataset_y_attack,"BOLD_","win","separate","current",FALSE,FALSE)
-FC_mean = extract_win_or_pay_mean(dataset_FC,dataset_y_attack,"FC_","win","separate","current",FALSE,FALSE)
-INS_mean = extract_win_or_pay_mean(dataset_INS,dataset_y_attack,"WNS_","win","separate","current",FALSE,FALSE)
-BINS_mean = extract_win_or_pay_mean(dataset_BINS,dataset_y_attack,"BNS_","win","separate","current",FALSE,FALSE)
+BOLD_mean = extract_win_or_pay_mean(dataset_BOLD,dataset_y_attack,"BOLD_","win",FALSE)
+FC_mean = extract_win_or_pay_mean(dataset_FC,dataset_y_attack,"FC_","win",FALSE)
+INS_mean = extract_win_or_pay_mean(dataset_INS,dataset_y_attack,"WNS_","win",FALSE)
+BINS_mean = extract_win_or_pay_mean(dataset_BINS,dataset_y_attack,"BNS_","win",FALSE)
 data_all_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)],BOLD_mean[,4:ncol(BOLD_mean)],FC_mean[,4:ncol(FC_mean)])
 data_INS_BINS_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)])
 data_BOLD_FC_invest = cbind(BOLD_mean[,c(1,4:ncol(BOLD_mean))],FC_mean[,4:ncol(FC_mean)])
@@ -41,6 +41,8 @@ data_minus_WNS_invest = cbind(BINS_mean[,c(1,4:ncol(BINS_mean))],BOLD_mean[,4:nc
 data_minus_BNS_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BOLD_mean[,4:ncol(BOLD_mean)],FC_mean[,4:ncol(FC_mean)])
 data_minus_BOLD_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)],FC_mean[,4:ncol(FC_mean)])
 data_minus_FC_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)],BOLD_mean[,4:ncol(BOLD_mean)])
+
+
 ```
 
 ## Predicting win vs. lose
