--- a/Fig2A.SVM_prediction/Analysis2A_SVM_invest_prediction.Rmd
+++ b/Fig2A.SVM_prediction/Analysis2A_SVM_invest_prediction.Rmd
@@ -28,7 +28,10 @@ BOLD_mean = extract_win_or_pay_mean(dataset_BOLD,dataset_y_attack,"BOLD_","win",
 FC_mean = extract_win_or_pay_mean(dataset_FC,dataset_y_attack,"FC_","win",FALSE)
 INS_mean = extract_win_or_pay_mean(dataset_INS,dataset_y_attack,"WNS_","win",FALSE)
 BINS_mean = extract_win_or_pay_mean(dataset_BINS,dataset_y_attack,"BNS_","win",FALSE)
-data_all_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)],BOLD_mean[,4:ncol(BOLD_mean)],FC_mean[,4:ncol(FC_mean)])
+data_all_invest = cbind(BOLD_mean[,c(1,4:ncol(BOLD_mean))],FC_mean[,4:ncol(FC_mean)],INS_mean[,4:ncol(INS_mean)],BINS_mean[,4:ncol(BINS_mean)])
+data_all_invest_rev = data_all_invest[rev(rownames(data_all_invest)),]
+data_all_invest_both = as.matrix(data_all_invest_rev[,2:ncol(data_all_invest_rev)])
+
 data_INS_BINS_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)])
 data_BOLD_FC_invest = cbind(BOLD_mean[,c(1,4:ncol(BOLD_mean))],FC_mean[,4:ncol(FC_mean)])
 
@@ -41,8 +44,11 @@ data_minus_WNS_invest = cbind(BINS_mean[,c(1,4:ncol(BINS_mean))],BOLD_mean[,4:nc
 data_minus_BNS_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BOLD_mean[,4:ncol(BOLD_mean)],FC_mean[,4:ncol(FC_mean)])
 data_minus_BOLD_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)],FC_mean[,4:ncol(FC_mean)])
 data_minus_FC_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)],BOLD_mean[,4:ncol(BOLD_mean)])
-
-
+```
+## Heatmap
+### Both win and lose
+```{r heat both}
+heatmap(data_all_invest_both,Colv = NA, Rowv = NA, scale = "column", col = hcl.colors(12, "YlOrRd", rev = TRUE))
 ```
 
 ## Predicting win vs. lose
