--- a/Supplement_analysis/S02_Hyperparameter_tuning/S02_1_Hyperparameter_tuning.Rmd
+++ b/Supplement_analysis/S02_Hyperparameter_tuning/S02_1_Hyperparameter_tuning.Rmd
@@ -13,7 +13,7 @@ load_packages(c("dplyr", "caret", "e1071","ggplot2", "pROC", "reshape2", "rstati
 ```
 
 ## Import data
-```{r impart data}
+```{r import data}
 setwd('../../Data/Develop')
 wd<-getwd()
 dataset_BOLD <- read.csv('BOLD_single_trial_invest.csv',header=TRUE,sep=",")
@@ -28,48 +28,39 @@ BOLD_mean = extract_win_or_pay_mean(dataset_BOLD,dataset_y_attack,"BOLD_","win",
 FC_mean = extract_win_or_pay_mean(dataset_FC,dataset_y_attack,"FC_","win",FALSE)
 INS_mean = extract_win_or_pay_mean(dataset_INS,dataset_y_attack,"WNS_","win",FALSE)
 BINS_mean = extract_win_or_pay_mean(dataset_BINS,dataset_y_attack,"BNS_","win",FALSE)
-data_all_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)],BOLD_mean[,4:ncol(BOLD_mean)],FC_mean[,4:ncol(FC_mean)])
-data_INS_BINS_invest = cbind(INS_mean[,c(1,4:ncol(INS_mean))],BINS_mean[,4:ncol(BINS_mean)])
-data_BOLD_FC_invest = cbind(BOLD_mean[,c(1,4:ncol(BOLD_mean))],FC_mean[,4:ncol(FC_mean)])
+data_all_invest = cbind(INS_mean[,c(1,3:ncol(INS_mean))],BINS_mean[,3:ncol(BINS_mean)],BOLD_mean[,3:ncol(BOLD_mean)],FC_mean[,3:ncol(FC_mean)])
+data_INS_BINS_invest = cbind(INS_mean[,c(1,3:ncol(INS_mean))],BINS_mean[,3:ncol(BINS_mean)])
+data_BOLD_FC_invest = cbind(BOLD_mean[,c(1,3:ncol(BOLD_mean))],FC_mean[,3:ncol(FC_mean)])
 ```
 
 ## SVM-RBF
 ### All features
-```{r svm_invest_all}
+```{r rbf_all}
 acc_all = nested_cv_classifier(data_all_invest,5,1,'svm-rbf',FALSE)
 print(acc_all)
-out_path = '/Users/xiaochunhan/Documents/Research/Projects/Brains_aligned_to_win/Supplement_analysis/S02_Hyperparameter_tuning'
-setwd(out_path)
-getwd()
 file_name = 'S02_Hyper_tune_full_model_svm-rbf.RData'
-save(acc_all,file = file_name)
+save(acc_all,file = file_name) 
 ```
 
 ### BOLD and FC
-```{r svm_invest_BOLD&FC}
+```{r rbf_BOLD&FC}
 acc_bold_fc = nested_cv_classifier(data_BOLD_FC_invest,5,1,'svm-rbf',FALSE)
 print(acc_bold_fc)
-out_path = '/Users/xiaochunhan/Documents/Research/Projects/Brains_aligned_to_win/Supplement_analysis/S02_Hyperparameter_tuning'
-setwd(out_path)
-getwd()
 file_name = 'S02_Hyper_tune_intra-brain_model.RData'
 save(acc_bold_fc,file = file_name)
 ```
 
 ### INS and BINS
-```{r svm_invest_INS&BINS}
+```{r rbf_INS&BINS}
 acc_ins_bins = nested_cv_classifier(data_INS_BINS_invest,5,1,'svm-rbf',FALSE)
 print(acc_ins_bins)
-out_path = '/Users/xiaochunhan/Documents/Research/Projects/Brains_aligned_to_win/Supplement_analysis/S02_Hyperparameter_tuning'
-setwd(out_path)
-getwd()
 file_name = 'S02_Hyper_tune_inter-brain_model.RData'
 save(acc_ins_bins,file = file_name)
 ```
 
 ## logistic_l2
 ### All features
-```{r svm_invest_all}
+```{r logl2_all}
 acc_all = nested_cv_classifier(data_all_invest,5,1,'logistic_l2',FALSE)
 print(acc_all)
 file_name = 'S02_Hyper_tune_full_model_logistic_l2.RData'
@@ -77,7 +68,7 @@ save(acc_all,file = file_name)
 ```
 
 ### BOLD and FC
-```{r svm_invest_BOLD&FC}
+```{r logl2_BOLD&FC}
 acc_bold_fc = nested_cv_classifier(data_BOLD_FC_invest,5,1,'logistic_l2',FALSE)
 print(acc_bold_fc)
 file_name = 'S02_Hyper_tune_intra-brain_model_logistic_l2.RData'
@@ -85,7 +76,7 @@ save(acc_bold_fc,file = file_name)
 ```
 
 ### INS and BINS
-```{r svm_invest_all}
+```{r logl2_INS&BINS}
 acc_ins_bins = nested_cv_classifier(data_INS_BINS_invest,5,1,'logistic_l2',FALSE)
 print(acc_ins_bins)
 file_name = 'S02_Hyper_tune_inter-brain_model_logistic_l2.RData'
@@ -94,7 +85,7 @@ save(acc_ins_bins,file = file_name)
 
 ## logistic_l1
 ### All features
-```{r svm_invest_all}
+```{r logl1_all}
 acc_all = nested_cv_classifier(data_all_invest,5,1,'logistic_l1',FALSE)
 print(acc_all)
 file_name = 'S02_Hyper_tune_full_model_logistic_l1.RData'
@@ -103,7 +94,7 @@ save(acc_all,file = file_name)
 
 
 ### BOLD and FC
-```{r svm_invest_BOLD&FC}
+```{r logl1_BOLD&FC}
 acc_bold_fc = nested_cv_classifier(data_BOLD_FC_invest,5,1,'logistic_l1',FALSE)
 print(acc_bold_fc)
 file_name = 'S02_Hyper_tune_intra-brain_model_logistic_l1.RData'
@@ -111,7 +102,7 @@ write.csv(acc_bold_fc,file = file_name)
 ```
 
 ### INS and BINS
-```{r svm_invest_all}
+```{r logl1_INS&BINS}
 acc_ins_bins = nested_cv_classifier(data_INS_BINS_invest,5,1,'logistic_l1',FALSE)
 print(acc_ins_bins)
 file_name = 'S02_Hyper_tune_inter-brain_model_logistic_l1.RData'
@@ -120,7 +111,7 @@ write.csv(acc_ins_bins,file = file_name)
 
 ## linear_svm_l2
 ### All features
-```{r svm_invest_all}
+```{r svml2_all}
 acc_all = nested_cv_classifier(data_all_invest,5,1,'linear_svm_l2',FALSE)
 print(acc_all)
 file_name = 'S02_Hyper_tune_full_model_linear_svm_l2.RData'
@@ -128,7 +119,7 @@ write.csv(acc_all,file = file_name)
 ```
 
 ### BOLD and FC
-```{r svm_invest_BOLD&FC}
+```{r svml2_BOLD&FC}
 acc_bold_fc = nested_cv_classifier(data_BOLD_FC_invest,5,1,'linear_svm_l2',FALSE)
 print(acc_bold_fc)
 file_name = 'S02_Hyper_tune_intra-brain_model_linear_svm_l2.RData'
@@ -136,7 +127,7 @@ write.csv(acc_bold_fc,file = file_name)
 ```
 
 ### INS and BINS
-```{r svm_invest_all}
+```{r svml2_INS&BINS}
 acc_ins_bins = nested_cv_classifier(data_INS_BINS_invest,5,1,'linear_svm_l2',FALSE)
 print(acc_ins_bins)
 file_name = 'S02_Hyper_tune_inter-brain_model_linear_svm_l2.RData'
@@ -145,7 +136,7 @@ write.csv(acc_ins_bins,file = file_name)
 
 ## linear_svm_l1
 ### All features
-```{r svm_invest_all}
+```{r svml1_all}
 acc_all = nested_cv_classifier(data_all_invest,5,1,'linear_svm_l1',FALSE)
 print(acc_all)
 file_name = 'S02_Hyper_tune_full_model_linear_svm_l1.RData'
@@ -153,7 +144,7 @@ write.csv(acc_all,file = file_name)
 ```
 
 ### BOLD and FC
-```{r svm_invest_BOLD&FC}
+```{r svml1_BOLD&FC}
 acc_bold_fc = nested_cv_classifier(data_BOLD_FC_invest,5,1,'linear_svm_l1',FALSE)
 print(acc_bold_fc)
 file_name = 'S02_Hyper_tune_intra-brain_model_linear_svm_l1.RData'
@@ -161,7 +152,7 @@ write.csv(acc_bold_fc,file = file_name)
 ```
 
 ### INS and BINS
-```{r svm_invest_all}
+```{r svml1_INS&BINS}
 acc_ins_bins = nested_cv_classifier(data_INS_BINS_invest,5,1,'linear_svm_l1',FALSE)
 print(acc_ins_bins)
 file_name = 'S02_Hyper_tune_inter-brain_model_linear_svm_l1.RData'
