--- a/Figure5ABC.Control_analysis/Analysis5ABC_Control_analysis.Rmd
+++ b/Figure5ABC.Control_analysis/Analysis5ABC_Control_analysis.Rmd
@@ -81,20 +81,6 @@ for (i in 1:100){
 meanACC_inter = mean(ACC_inter[,1])
 print(meanACC_inter)
 ```
-```{r acc_INS&BINS}
-ACC_all = data.frame();
-for (i in 1:100){
-  WNS_mean = extract_match_win_lose_mean(dataset_INS,dataset_y_attack,"WNS_",12)
-  BNS_mean = extract_match_win_lose_mean(dataset_BINS,dataset_y_attack,"BNS_",12)
-  BOLD_mean = extract_match_win_lose_mean(dataset_BOLD,dataset_y_attack,"BOLD_",12)
-  FC_mean = extract_match_win_lose_mean(dataset_FC,dataset_y_attack,"FC_",12)
-  data_all_invest = cbind(BOLD_mean[,c(1,3:ncol(BOLD_mean))],FC_mean[,3:ncol(FC_mean)],WNS_mean[,3:ncol(WNS_mean)],BNS_mean[,3:ncol(BNS_mean)])
-  acc_all = svm_cv_accuracy(data_all_invest,5,1,"radial")
-  ACC_all = rbind(ACC_all,acc_all)
-}
-meanACC_all = mean(ACC_all[,1])
-print(meanACC_all)
-```
 
 #### permutation
 ```{r permute_INS&BINS, eval=FALSE}
@@ -180,4 +166,59 @@ p <- ggplot(acc_match_intra_perm, aes(x = acc_perm, fill = as.factor(ci95))) +
     labs(x = "Win-Lose Prediction Accuracy") + theme(text = element_text(size = 15),legend.position="none",axis.ticks.length=unit(-0.1, "cm"))
 print(p)
 ggsave("Match12_perm_BOLD_FC.png", plot = p, width = 5, height = 4, dpi = 300)
+```
+
+### Full-model Match
+#### Accuracy
+```{r acc_full}
+ACC_all = data.frame();
+for (i in 1:100){
+  WNS_mean = extract_match_win_lose_mean(dataset_INS,dataset_y_attack,"WNS_",12)
+  BNS_mean = extract_match_win_lose_mean(dataset_BINS,dataset_y_attack,"BNS_",12)
+  BOLD_mean = extract_match_win_lose_mean(dataset_BOLD,dataset_y_attack,"BOLD_",12)
+  FC_mean = extract_match_win_lose_mean(dataset_FC,dataset_y_attack,"FC_",12)
+  data_all_invest = cbind(BOLD_mean[,c(1,3:ncol(BOLD_mean))],FC_mean[,3:ncol(FC_mean)],WNS_mean[,3:ncol(WNS_mean)],BNS_mean[,3:ncol(BNS_mean)])
+  acc_all = svm_cv_accuracy(data_all_invest,5,1,"radial")
+  ACC_all = rbind(ACC_all,acc_all)
+}
+meanACC_all = mean(ACC_all[,1])
+print(meanACC_all)
+```
+
+#### permutation
+```{r permute_all, eval=FALSE}
+permACC_all = data.frame();
+for (i in 1:5000){
+  print(i)
+  WNS_mean = extract_match_win_lose_mean(dataset_INS,dataset_y_attack,"WNS_",12)
+  BNS_mean = extract_match_win_lose_mean(dataset_BINS,dataset_y_attack,"BNS_",12)
+  BOLD_mean = extract_match_win_lose_mean(dataset_BOLD,dataset_y_attack,"BOLD_",12)
+  FC_mean = extract_match_win_lose_mean(dataset_FC,dataset_y_attack,"FC_",12)
+  data_all_invest = cbind(BOLD_mean[,c(1,3:ncol(BOLD_mean))],FC_mean[,3:ncol(FC_mean)],WNS_mean[,3:ncol(WNS_mean)],BNS_mean[,3:ncol(BNS_mean)])
+  acc_all = svm_perm(data_all_invest,5,1,"radial")
+  permACC_all = rbind(permACC_all,acc_all[,1])
+}
+
+saveRDS(permACC_all, file = "SVM_win_all_perm_5000_match_12.RData")
+```
+
+#### figure
+```{r hist_all}
+acc_match_all_perm = readRDS("SVM_win_all_perm_5000_match_12.RData")
+colnames(acc_match_all_perm) = "acc_perm"
+acc_low_25 = sort(acc_match_all_perm$acc_perm)[125]
+acc_top_25 = sort(acc_match_all_perm$acc_perm)[4875]
+acc_match_all_perm$ci95 = rep(0,5000)
+acc_match_all_perm$ci95[(acc_match_all_perm$acc_perm<acc_low_25|acc_match_all_perm$acc_perm>acc_top_25)] = 1
+meanACC_all = 0.6270
+p_match_all_perm = mean(meanACC_all<acc_match_all_perm$acc_perm)
+print(p_match_all_perm)
+
+p <- ggplot(acc_match_all_perm, aes(x = acc_perm, fill = as.factor(ci95))) +
+    geom_histogram(colour = "#4C4C4C", bins = 61) + 
+    scale_fill_manual(values = c("white","#969796"))+
+    geom_vline(aes(xintercept = meanACC_all), color = "#969796", linewidth = 2) + theme_classic()+xlim(0,1) + 
+    labs(x = "Win-Lose Prediction Accuracy") + theme(text = element_text(size = 15),legend.position="none",axis.ticks.length=unit(-0.1, "cm"))
+print(p)
+ggsave("Match12_perm_all.png", plot = p, width = 5, height = 4, dpi = 300)
 ```
