--- a/Supplement_analysis/S08_Colliearity_track_param/Analysis2_Colliearity_track_param.Rmd
+++ b/Supplement_analysis/S08_Colliearity_track_param/Analysis2_Colliearity_track_param.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Analysis_Collinearity_track_param"
+title: "Analysis2_Collinearity_track_param"
 author: "Xiaochun Han"
 date: "2026-01-21"
 output: html_document
@@ -9,96 +9,114 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 rm(list = ls())
 source("../../utils/functions_library.R")
-load_packages(c("dplyr", "caret", "e1071","ggplot2", "pROC", "reshape2", "rstatix","plotrix","psych","readxl","ggpubr","car","corrplot","ppcor"))
+load_packages(c("dplyr", "caret", "e1071","ggplot2", "pROC", "reshape2", "rstatix","plotrix","psych","readxl","ggpubr","car","corrplot"))
 ```
 
 ## Import regress data
 ```{r import_data}
-tr <- read.csv('Regress_Rvalue_VIFs.csv',header=TRUE,sep=",")
+tr <- read_excel('DAFD_Behavior_Neural_30sess_behav_cor_AllINS_20250524.xlsx',sheet="raw_data")
 
-df_R_AL = tr[((tr$Role.A.1. == 1)&(tr$Leader.L.1.==1)),c("R_IN_OUT","R_diff_IN","R_diff_OUT")]
-df_R_AF = tr[((tr$Role.A.1. == 1)&(tr$Leader.L.1.==0)),c("R_IN_OUT","R_diff_IN","R_diff_OUT")]
-df_R_DL = tr[((tr$Role.A.1. == 2)&(tr$Leader.L.1.==1)),c("R_IN_OUT","R_diff_IN","R_diff_OUT")]
-df_R_DF = tr[((tr$Role.A.1. == 2)&(tr$Leader.L.1.==0)),c("R_IN_OUT","R_diff_IN","R_diff_OUT")]
+#Attacker
+beh_AW_alpha1 = tr[(tr$roleA1D2 == 1),c("detaC_within_Tmean")]
+beh_AW_alpha2 = tr[(tr$roleA1D2 == 1),c("detaC_within_TG")]
+beh_AB = tr[(tr$roleA1D2 == 1),c("detaC_between_TG")]
+df_org_A = cbind(beh_AW_alpha1,beh_AW_alpha2,beh_AB)
+colnames(df_org_A) <- c("alpha1", "alpha2", "beta1")
 
-df_vif_AL = tr[((tr$Role.A.1. == 1)&(tr$Leader.L.1.==1)),c("VIF_diff","VIF_IN","VIF_OUT")]
-df_vif_AF = tr[((tr$Role.A.1. == 1)&(tr$Leader.L.1.==0)),c("VIF_diff","VIF_IN","VIF_OUT")]
-df_vif_DL = tr[((tr$Role.A.1. == 2)&(tr$Leader.L.1.==1)),c("VIF_diff","VIF_IN","VIF_OUT")]
-df_vif_DF = tr[((tr$Role.A.1. == 2)&(tr$Leader.L.1.==0)),c("VIF_diff","VIF_IN","VIF_OUT")]
+#Defender
+beh_DW_alpha1 = tr[(tr$roleA1D2 == 2),c("detaC_within_Tmean")]
+beh_DW_alpha2 = tr[(tr$roleA1D2 == 2),c("detaC_within_TG")]
+beh_DB = tr[(tr$roleA1D2 == 2),c("detaC_between_TG")]
+df_org_D = cbind(beh_DW_alpha1,beh_DW_alpha2,beh_DB)
+colnames(df_org_D) <- c("alpha1", "alpha2", "beta1")
 ```
 
-## Attacker-Leader
-### correlation
-```{r R_AL}
-means <- colMeans(df_R_AL)
+## Attacker
+```{r collearity_AL}
+cor_result <- corr.test(df_org_A, method = "pearson", adjust = "none")
 
-# 显示结果
-print("各列均值：")
-print(means)
+# 显示相关系数矩阵
+print("相关系数矩阵:")
+print(cor_result$r)
+
+# 显示p值矩阵
+print("显著性p值矩阵:")
+print(cor_result$p)
+
+# 2. 判断相关性是否显著（以0.05为显著性水平）
+significant <- cor_result$p < 0.05
+print("显著性判断（TRUE表示显著）:")
+print(significant)
+
+corrplot(cor_result$r, 
+         method = "color",        # 用颜色方块做背景
+         type = "upper",          # 只画上三角
+         col = rev(COL2('RdBu', 200)),
+         p.mat = cor_result$p,
+         sig.level = c(0.001, 0.01, 0.05),
+         insig = "label_sig",
+         pch.cex = 1.7,
+         pch.col = "white",
+         tl.pos = "lt",           # 标签位置放在左侧和上侧
+         cl.pos = "r",
+         tl.col = "black",
+         tl.cex = 1.5,            # 变量标签字体大小（放大）
+         tl.srt = 45)            # 颜色图例放在右侧
+
+# 然后，叠加绘制下三角部分，显示相关系数值
+corrplot(cor_result$r, 
+         add = TRUE,              # 关键：叠加到前一个图上
+         type = "lower",          # 只画下三角
+         method = "number",       # 下三角用数字显示相关系数
+         col = "black",           # 数字颜色为黑色
+         number.cex = 1.7,        # 设置数字大小
+         number.digits = 2,       # 保留2位小数
+         diag = FALSE,            # 不显示对角线内容
+         tl.pos = "n",            # 不重复显示变量标签
+         cl.pos = "n")            # 不重复显示颜色图例
 ```
 
-### vif
-```{r vif_AL}
-means <- colMeans(df_vif_AL)
+## Defender
+```{r collearity_D}
+cor_result <- corr.test(df_org_D, method = "pearson", adjust = "none")
 
-# 显示结果
-print("各列均值：")
-print(means)
-```
+# 显示相关系数矩阵
+print("相关系数矩阵:")
+print(cor_result$r)
 
-## Attacker-Follower
-### correlation
-```{r R_AF}
-means <- colMeans(df_R_AF)
+# 显示p值矩阵
+print("显著性p值矩阵:")
+print(cor_result$p)
 
-# 显示结果
-print("各列均值：")
-print(means)
-```
+# 2. 判断相关性是否显著（以0.05为显著性水平）
+significant <- cor_result$p < 0.05
+print("显著性判断（TRUE表示显著）:")
+print(significant)
 
-### vif
-```{r vif_AF}
-means <- colMeans(df_vif_AF)
+corrplot(cor_result$r, 
+         method = "color",        # 用颜色方块做背景
+         type = "upper",          # 只画上三角
+         col = rev(COL2('RdBu', 200)),
+         p.mat = cor_result$p,
+         sig.level = c(0.001, 0.01, 0.05),
+         insig = "label_sig",
+         pch.cex = 1.7,
+         pch.col = "white",
+         tl.pos = "lt",           # 标签位置放在左侧和上侧
+         cl.pos = "r",
+         tl.col = "black",
+         tl.cex = 1.5,            # 变量标签字体大小（放大）
+         tl.srt = 45)            # 颜色图例放在右侧
 
-# 显示结果
-print("各列均值：")
-print(means)
-```
-
-## Defender-Leader
-### correlation
-```{r R_DL}
-means <- colMeans(df_R_DL)
-
-# 显示结果
-print("各列均值：")
-print(means)
-```
-
-### vif
-```{r vif_DL}
-means <- colMeans(df_vif_DL)
-
-# 显示结果
-print("各列均值：")
-print(means)
-```
-
-## Defender-Follower
-### correlation
-```{r R_DF}
-means <- colMeans(df_R_DF)
-
-# 显示结果
-print("各列均值：")
-print(means)
-```
-
-### vif
-```{r vif_DF}
-means <- colMeans(df_vif_DF)
-
-# 显示结果
-print("各列均值：")
-print(means)
+# 然后，叠加绘制下三角部分，显示相关系数值
+corrplot(cor_result$r, 
+         add = TRUE,              # 关键：叠加到前一个图上
+         type = "lower",          # 只画下三角
+         method = "number",       # 下三角用数字显示相关系数
+         col = "black",           # 数字颜色为黑色
+         number.cex = 1.7,        # 设置数字大小
+         number.digits = 2,       # 保留2位小数
+         diag = FALSE,            # 不显示对角线内容
+         tl.pos = "n",            # 不重复显示变量标签
+         cl.pos = "n")            # 不重复显示颜色图例
 ```
